--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.3"
+    "@astrojs/mdx": "^4.3.12",
+    "@astrojs/node": "^9.5.1",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.3",
+    "tailwindcss": "^4.1.17"
   }
 }
