--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/node": "^9.5.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/p5": "^1.7.7",
     "astro": "^5.16.3",
+    "p5": "^2.1.1",
     "tailwindcss": "^4.1.17"
   }
 }
