--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "@types/p5": "^1.7.7",
     "astro": "^5.16.3",
+    "github-slugger": "^2.0.0",
+    "hast-util-to-string": "^3.0.1",
     "p5": "^2.1.1",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "unist-util-visit": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/hast": "^3.0.4"
   }
 }
