--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,7 +67,7 @@ jobs:
           service: ${{ env.SERVICE_NAME }}
           region: ${{ env.REGION }}
           image: ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/personal-site/${{ env.SERVICE_NAME }}:${{ github.sha }}
-          revision_traffic: 100
+          revision_traffic: "LATEST=100"
           flags: |
             --min-instances=0
             --max-instances=2
