feat: implement dynamic OG image infrastructure.

--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/node": "^9.5.1",
     "@astrojs/rss": "^4.0.14",
+    "@resvg/resvg-js": "^2.6.2",
     "@shikijs/transformers": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "@types/p5": "^1.7.7",
     "astro": "^5.16.3",
+    "culori": "^4.0.2",
     "github-slugger": "^2.0.0",
     "hast-util-to-string": "^3.0.1",
     "p5": "^2.1.1",
+    "satori": "^0.18.3",
+    "satori-html": "^0.3.2",
     "tailwindcss": "^4.1.17",
     "unist-util-visit": "^5.0.0"
   },
