--- a/package.json
+++ b/package.json
@@ -28,6 +28,13 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/hast": "^3.0.4"
+    "@eslint/eslintrc": "^3.3.3",
+    "@types/hast": "^3.0.4",
+    "@typescript-eslint/parser": "^8.50.0",
+    "eslint": "^9.39.2",
+    "eslint-plugin-astro": "^1.5.0",
+    "eslint-plugin-check-file": "^3.3.1",
+    "eslint-plugin-import": "^2.32.0",
+    "typescript-eslint": "^8.50.0"
   }
 }
