--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "check": "astro check",
+    "fmt": "prettier --write .",
+    "fmt:check": "prettier --check ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.6",
@@ -38,6 +41,8 @@
     "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-check-file": "^3.3.1",
     "eslint-plugin-import": "^2.32.0",
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1",
     "typescript-eslint": "^8.50.0"
   }
 }
